fix(ui-themes-minimal): Tertiary foreground contrast ration on light theme below WCAG AAA

--- a/web/packages/ui-themes-minimal-app/src/index.css
+++ b/web/packages/ui-themes-minimal-app/src/index.css
@@ -27,7 +27,7 @@
         --secondary-foreground: 222.2 35.4% 35%;
 
         --tertiary: 210 40% 80.1%;
-        --tertiary-foreground: 222.2 20% 60%;
+        --tertiary-foreground: 222.2 20% 50%;
 
         --accent: 210 40% 96.1%;
         --accent-foreground: 222.2 47.4% 11.2%;
